Progress tugas uts 1/11/2021
Thoriq dan Yovie

--- a/Bleu/bleu.html
+++ b/Bleu/bleu.html
@@ -1,3 +1,10 @@
+<!---Thoriq Hidayansyah_2172019
+    -Yovie Adhisti_2172005
+    -Fransisca Elizabeth _2172007-->
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,32 +12,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>/Bleu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="center">
-    <table class="table">
-        <tr>
-            <td><img src="kacamanon.png" width="1200px" height="700px"></td>
-        </tr>
-    </table>
+    <div class="nav"><img src="src/logo.jpg" height="100px" width="300px"></div>
+    <div class="kotak">
+        <div class="main">
+            <div><span class="kaca">/Glasses</span><br><p class="kaca2">Lightweight & modern titanium frames for professional and students</p></div>
+            <br>
+            <div class="button"><a href="kacamata.html" class="color">Order</a></div>
+            <div><img src="src/kacamanon.png"></div>
+        </div>
+    </div>    
     <br><br><br>
     <table class="table2">
         <tr>
-            <td><img src="hat.png" class="pic"></td>
-            <td><img src="bucket hat.png" class="pic"></td>
-            <td><img src="wallet.png" class="pic"></td>
+            <td><a href="hat.html"><img src="src/hat.png" class="pic"></a></td>
+            <td><a href="buckethat.html"><img src="src/bucket hat.png" class="pic"></a></td>
+            <td><a href="wallet.html"><img src="src/wallet.png" class="pic"></a></td>
         </tr>
         <tr>
-            <td><img src="Duffle Bag.png" class="pic"></td>
-            <td><img src="sling bag.png" class="pic"></td>
-            <td><img src="laptop holster.png" class="pic"></td>
+            <td><a href="dufflebag.html"><img src="src/Duffle Bag.png" class="pic"></a></td>
+            <td><a href="slingbag.html"><img src="src/sling bag.png" class="pic"></a></td>
+            <td><a href="laptop holster.html"><img src="src/laptop holster.png" class="pic"></a></td>
         </tr>
         <tr>
-            <td><img src="Cassingg.png" class="pic"></td>
-            <td><img src="parffum.png" class="pic"></td>
-            <td><img src="belt.png" class="pic"></td>
+            <td><a href="cassing.html"><img src="src/Cassingg.png" class="pic"></a></td>
+            <td><a href="parfume.html"><img src="src/parffum.png" class="pic"></a></td>
+            <td><a href="belt.html"><img src="src/belt.png" class="pic"></a></td>
         </tr>
     </table>
-    <span class="buletan"><p id="ijo" class="fontfixed"><br>Fixed</p></span>
+    <span class="buletan"><p id="ijo" class="fontfixed"><br></p></span>
 </body>
 </html>
