--- a/Bleu/buckethat.html
+++ b/Bleu/buckethat.html
@@ -19,18 +19,18 @@
     <table class="table2">
         <tr>
             <td>
-                <img src="src/kacamata2.png">
+                <img src="src/BucketHat aja.png">
             </td>
             
             <td class="left">
-                <h1 class="font">/Glasses</h1>
+                <h1 class="font">/Bucket Hat</h1>
                 <h1><p class="merah">100k</p></h1>
                 <br>
-                <h3>The perfect combination of the comfort of a sporty and square  <br>
-                    acetate frame with the contemporary feel of a flat-front design.<br>
-                    Completed by gray lenses, the modern sunglasses will lend you to any look.<br><br>
-                    <div class="divkanan"><h3 class="top"><li>200 Ulasan</li></h3></div>
-                    <div class="divkanan"><h3><li>101 Terjual</li></h3></div>
+                <h3>The design is crafted in a slightly stretch denim-style cotton<br>
+                    gabardine. With its rounded cut and small brim, it offers protection from<br>
+                    the sun while lending an iconic touch to any silhouette.<br><br>
+                    <div class="divkanan"><h3 class="top"><li>50 Ulasan</li></h3></div>
+                    <div class="divkanan"><h3><li>325 Terjual</li></h3></div>
                     <br>
                 </h3><br></p><br>
                 <div class="button"><a href="" class="color">Order</a></div>
