--- a/Bleu/cassing.html
+++ b/Bleu/cassing.html
@@ -19,24 +19,24 @@
     <table class="table2">
         <tr>
             <td>
-                <img src="src/kacamata2.png">
+                <img src="src/cassinggg.png">
             </td>
-            
+
             <td class="left">
-                <h1 class="font">/Glasses</h1>
-                <h1><p class="merah">100k</p></h1>
+                <h1 class="font">/Cassing</h1>
+                <h1><p class="merah">50k</p></h1>
                 <br>
-                <h3>The perfect combination of the comfort of a sporty and square  <br>
-                    acetate frame with the contemporary feel of a flat-front design.<br>
-                    Completed by gray lenses, the modern sunglasses will lend you to any look.<br><br>
-                    <div class="divkanan"><h3 class="top"><li>200 Ulasan</li></h3></div>
-                    <div class="divkanan"><h3><li>101 Terjual</li></h3></div>
+                <h3>An ideal mix of style and protection, it is easy to carry, thanks to its  <br>
+                    slim lines and compact design. It will add a trendy look to your phone and<br>
+                    ensure you stand out from the crowd.<br><br>
+                    <div class="divkanan"><h3 class="top"><li>132 Ulasan</li></h3></div>
+                    <div class="divkanan"><h3><li>471 Terjual</li></h3></div>
                     <br>
                 </h3><br></p><br>
                 <div class="button"><a href="" class="color">Order</a></div>
             </td>
         </tr>
     </table>
-    
+
 </body>
 </html>
