--- a/Bleu/dufflebag.html
+++ b/Bleu/dufflebag.html
@@ -19,18 +19,18 @@
     <table class="table2">
         <tr>
             <td>
-                <img src="src/kacamata2.png">
+                <img src="src/duflebag.png">
             </td>
             
             <td class="left">
-                <h1 class="font">/Glasses</h1>
-                <h1><p class="merah">100k</p></h1>
+                <h1 class="font">/Duffle Bag</h1>
+                <h1><p class="merah">500k</p></h1>
                 <br>
-                <h3>The perfect combination of the comfort of a sporty and square  <br>
-                    acetate frame with the contemporary feel of a flat-front design.<br>
-                    Completed by gray lenses, the modern sunglasses will lend you to any look.<br><br>
-                    <div class="divkanan"><h3 class="top"><li>200 Ulasan</li></h3></div>
-                    <div class="divkanan"><h3><li>101 Terjual</li></h3></div>
+                <h3>Timelessly elegant in emblematic Taiga leather. Ideal for<br>
+                    travelling and taking all the necessities, this bag has a generous amount of<br>
+                    space. Can be comfortably carried by hand or on the shoulder.<br><br>
+                    <div class="divkanan"><h3 class="top"><li>30 Ulasan</li></h3></div>
+                    <div class="divkanan"><h3><li>80 Terjual</li></h3></div>
                     <br>
                 </h3><br></p><br>
                 <div class="button"><a href="" class="color">Order</a></div>
