--- a/Bleu/hat.html
+++ b/Bleu/hat.html
@@ -19,24 +19,25 @@
     <table class="table2">
         <tr>
             <td>
-                <img src="src/kacamata2.png">
+                <img src="src/hatt.png">
             </td>
-            
+
             <td class="left">
-                <h1 class="font">/Glasses</h1>
+                <h1 class="font">/Hat</h1>
                 <h1><p class="merah">100k</p></h1>
                 <br>
-                <h3>The perfect combination of the comfort of a sporty and square  <br>
-                    acetate frame with the contemporary feel of a flat-front design.<br>
-                    Completed by gray lenses, the modern sunglasses will lend you to any look.<br><br>
-                    <div class="divkanan"><h3 class="top"><li>200 Ulasan</li></h3></div>
-                    <div class="divkanan"><h3><li>101 Terjual</li></h3></div>
+                <h3>The timeless hat complements classic looks and bold fashion-forward  <br>
+                    styles in equal measure. A single ‘Boss Logo’ takes the spotlight on the<br>
+                    front, adding a bold touch. The matching trim, button and adjustable strap <br>
+                    add rich signature accents to this chic piece. <br><br>
+                    <div class="divkanan"><h3 class="top"><li>61 Ulasan</li></h3></div>
+                    <div class="divkanan"><h3><li>149 Terjual</li></h3></div>
                     <br>
                 </h3><br></p><br>
                 <div class="button"><a href="" class="color">Order</a></div>
             </td>
         </tr>
     </table>
-    
+
 </body>
 </html>
