--- a/Bleu/laptop holster.html
+++ b/Bleu/laptop holster.html
@@ -19,24 +19,25 @@
     <table class="table2">
         <tr>
             <td>
-                <img src="src/kacamata2.png">
+                <img src="src/laptop holsterr.png">
             </td>
-            
+
             <td class="left">
-                <h1 class="font">/Glasses</h1>
-                <h1><p class="merah">100k</p></h1>
+                <h1 class="font">/Laptop Holster</h1>
+                <h1><p class="merah">150k</p></h1>
                 <br>
-                <h3>The perfect combination of the comfort of a sporty and square  <br>
-                    acetate frame with the contemporary feel of a flat-front design.<br>
-                    Completed by gray lenses, the modern sunglasses will lend you to any look.<br><br>
-                    <div class="divkanan"><h3 class="top"><li>200 Ulasan</li></h3></div>
-                    <div class="divkanan"><h3><li>101 Terjual</li></h3></div>
+                <h3>This laptop holster is for the modern businessman who <br>
+                    want to keep their documents, files and digital devices organized and safe.<br>
+                    As functional as it is stylish, it will follow you everywhere: as much at work <br>
+                    as during your business trips. <br><br>
+                    <div class="divkanan"><h3 class="top"><li>28 Ulasan</li></h3></div>
+                    <div class="divkanan"><h3><li>84 Terjual</li></h3></div>
                     <br>
                 </h3><br></p><br>
                 <div class="button"><a href="" class="color">Order</a></div>
             </td>
         </tr>
     </table>
-    
+
 </body>
 </html>
