--- a/Bleu/parfume.html
+++ b/Bleu/parfume.html
@@ -19,24 +19,27 @@
     <table class="table2">
         <tr>
             <td>
-                <img src="src/kacamata2.png">
+                <img src="src/parfumee.png">
             </td>
-            
+
             <td class="left">
-                <h1 class="font">/Glasses</h1>
-                <h1><p class="merah">100k</p></h1>
+                <h1 class="font">/Parfum</h1>
+                <h1><p class="merah">200k</p></h1>
                 <br>
-                <h3>The perfect combination of the comfort of a sporty and square  <br>
-                    acetate frame with the contemporary feel of a flat-front design.<br>
-                    Completed by gray lenses, the modern sunglasses will lend you to any look.<br><br>
-                    <div class="divkanan"><h3 class="top"><li>200 Ulasan</li></h3></div>
-                    <div class="divkanan"><h3><li>101 Terjual</li></h3></div>
+                <h3>Discover the Intense freshness from the sea. Davidoff revisited <br>
+                    Cool Water freshness with an ethically sourced ingredient : the green<br>
+                    mandarin. This handpicked citrus was harvested by a community in the <br>
+                    Vale Do Caí in Brazil. The scent unfolds into oriental notes of coconut water <br>
+                    blended with the sensuality of amber accord. Your ultimate call of  <br>
+                    freshness, hedonism and seduction.<br><br>
+                    <div class="divkanan"><h3 class="top"><li>33 Ulasan</li></h3></div>
+                    <div class="divkanan"><h3><li>78 Terjual</li></h3></div>
                     <br>
                 </h3><br></p><br>
                 <div class="button"><a href="" class="color">Order</a></div>
             </td>
         </tr>
     </table>
-    
+
 </body>
 </html>
