--- a/Bleu/slingbag.html
+++ b/Bleu/slingbag.html
@@ -19,18 +19,19 @@
     <table class="table2">
         <tr>
             <td>
-                <img src="src/kacamata2.png">
+                <img src="src/slingbagg.png">
             </td>
             
             <td class="left">
-                <h1 class="font">/Glasses</h1>
-                <h1><p class="merah">100k</p></h1>
+                <h1 class="font">/Sling Bag</h1>
+                <h1><p class="merah">800k</p></h1>
                 <br>
-                <h3>The perfect combination of the comfort of a sporty and square  <br>
-                    acetate frame with the contemporary feel of a flat-front design.<br>
-                    Completed by gray lenses, the modern sunglasses will lend you to any look.<br><br>
-                    <div class="divkanan"><h3 class="top"><li>200 Ulasan</li></h3></div>
-                    <div class="divkanan"><h3><li>101 Terjual</li></h3></div>
+                <h3> Crafted from puffy lambskin, it presents the ruthenium-finish<br>
+                    brass 'Channel Icon' signature on the front.The interior enables easy<br>
+                     organization of a woman’s essentials because its multiple compartments.<br>
+                    With its graphic flap design and sleek shape, this bag gives off a modern feel.<br><br>
+                    <div class="divkanan"><h3 class="top"><li>30 Ulasan</li></h3></div>
+                    <div class="divkanan"><h3><li>50 Terjual</li></h3></div>
                     <br>
                 </h3><br></p><br>
                 <div class="button"><a href="" class="color">Order</a></div>
