--- a/Bleu/wallet.html
+++ b/Bleu/wallet.html
@@ -19,18 +19,18 @@
     <table class="table2">
         <tr>
             <td>
-                <img src="src/kacamata2.png">
+                <img src="src/wallett.png">
             </td>
             
             <td class="left">
-                <h1 class="font">/Glasses</h1>
+                <h1 class="font">/Wallet</h1>
                 <h1><p class="merah">100k</p></h1>
                 <br>
-                <h3>The perfect combination of the comfort of a sporty and square  <br>
-                    acetate frame with the contemporary feel of a flat-front design.<br>
-                    Completed by gray lenses, the modern sunglasses will lend you to any look.<br><br>
-                    <div class="divkanan"><h3 class="top"><li>200 Ulasan</li></h3></div>
-                    <div class="divkanan"><h3><li>101 Terjual</li></h3></div>
+                <h3>The wallet is a compact accessory with a refined look. With multiple<br>
+                    card slots and compartments, it’s a practical everyday companion for the<br>
+                    modern man with classic tastes.<br><br>
+                    <div class="divkanan"><h3 class="top"><li>800 Ulasan</li></h3></div>
+                    <div class="divkanan"><h3><li>1.256 Terjual</li></h3></div>
                     <br>
                 </h3><br></p><br>
                 <div class="button"><a href="" class="color">Order</a></div>
